Registro y Login de Usuarios añadidos
Vistas y funcionalidades de registro y login de usuarios en la base de datos en MongoDB

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -4,3 +4,9 @@
     right: 15%;
     width: 70%;
 }
+
+.navbar-brand {
+    transform: translateX(-50%);
+    left: 50%;
+    position: absolute;
+}
