--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,1 +1,6 @@
 <h1>Acerca de Music.io</h1>
+<br>
+<h4>Music.io es un proyecto desarrollado en NodeJS utilizando MongoDB para la materia DESARROLLO WEB II, el cual es un clon de Spotify.
+    Permitiendo subir canciones a un usuario administrador, para asi un usuario comun reproducirlas, crear sus playlists,
+    compartirlas con amigos y añadir canciones a sus favoritos.
+</h4>
