--- a/src/views/users/dashboard.hbs
+++ b/src/views/users/dashboard.hbs
@@ -1,4 +1,4 @@
-<h1>Bienvenido Admin!</h1>
+<h1>Bienvenido! {{name}}</h1>
 
 <div class="list-group">
   <a href="/play" class="list-group-item list-group-item-action active" aria-current="true">
@@ -6,4 +6,5 @@
   </a>
   <a href="/playlists" class="list-group-item list-group-item-action">Playlists</a>
   <a href="/subir" class="list-group-item list-group-item-action">Subir canciones</a>
+  <a href="/albums" class="list-group-item list-group-item-action">Albums</a>
 </div>
