--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,25 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Music.io</a>
+    <a class="navbar-brand" href="/"><img alt="" src="../../public/img/Frame1.png" class="img-responsive" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
+                <li class="nav-item">
           <a class="nav-link" href="/about">Acerca de</a>
         </li>
       </ul>
+      <a class="navbar-brand" href="/">Music.io</a>
       <ul class="navbar-nav ml-auto">
+        {{#if user}}
           <li class="nav-item">
-              <a href="#" class="nav-link">Login</a>
+              <a href="/dash" class="nav-link">Tu Perfil</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Registrarse</a>
+              <a class="nav-link" href="/logout">Cerrar Sesión</a>
           </li>
+          {{else}}
+          <li class="nav-item">
+              <a href="/signin" class="nav-link">Iniciar Sesión</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="/signup">Registrarse</a>
+          </li>
+        {{/if}}
       </ul>
     </div>
   </div>
