--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,2 +1,28 @@
+<h1>Bienvenido a Music.io, en esta plataforma puedes:</h1>
 
-<h1>Bienvenido a Music.io, incia y escucha tus canciones favoritas!</h1>
+<div class="container p-2">
+    <div class="row">
+        <div class="card-columns">
+            <div class="card text-center">
+                <i class="fas fa-compact-disc fa-10x"></i>
+                <div class="card-body">
+                    <h3>Escuchar tus canciones favoritas.</h3>
+                </div>
+            </div>
+            <div class="card text-center">
+                <i class="fas fa-list fa-10x"></i>
+                <div class="card-body">
+                    <h3>Crear tus playlist personalizadas.</h3>
+                </div>
+            </div>
+            <div class="card text-center">
+                <i class="fas fa-search fa-10x"></i>
+                <div class="card-body">
+                    <h3>Buscar tus canciones y artistas favotitos.</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h1 class="text-center">Unete y empieza!</h1>
