--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -12,7 +12,8 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
     <!-- CSS Personalizado -->
     <link rel="stylesheet" href="/css/main.css">
-    
+    <link rel="stylesheet" href="/css/player.css">
+
     <title>Music.io</title>
 </head>
 <body>
@@ -25,11 +26,30 @@
     {{{ body }}}
 </main>
 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
+{{#if user}}
+<footer class="footer mx-auto py-3">
+  <div class="container mx-auto" id="audio-player-container">
+        <audio src='/play/{{_id}}' preload=”metadata” loop>
+            <source src='/play/{{_id}}'>
+        </audio>
+        <button id="play-icon"></button>
+        <span id="current-time" class="time">0:00</span>
+        <input type="range" id="seek-slider" max="100" value="0">
+        <span id="duration" class="time">0:00</span>
+        <output id="volume-output">100</output>
+        <input type="range" id="volume-slider" max="100" value="100">
+        <button id="mute-icon"></button>
+  </div>
+</footer>
+ {{/if}}
+
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
 
 </body>
 </html>
