--- a/src/views/music/upload.hbs
+++ b/src/views/music/upload.hbs
@@ -1,7 +1,9 @@
+<a href="/admin"><i class="fas fa-arrow-circle-left fa-2x"></i></a><br><br>
 <div class="container p-4">
         <div class="row">
-                <div class="col-md-4 offset-md-4">
+                <div class="col-md-9 mx-auto">
                         <div class="card">
+                                <h1 class="text-center">Sube tus canciones servidor.</h1>
                                 <div class="card-body">
                                         <form action="/subircancion" method="POST" enctype="multipart/form-data">
                                         <div class="form-group">
