--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -7,24 +7,24 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
                 <li class="nav-item">
-          <a class="nav-link" href="/about">Acerca de</a>
+          <a class="nav-link" href="/about">Acerca de <i class="fas fa-question fa-1x"></i></a>
         </li>
       </ul>
-      <a class="navbar-brand" href="/">Music.io</a>
+      <a class="navbar-brand" href="/"><i class="fas fa-music fa-1x"></i> Music.io</a>
       <ul class="navbar-nav ml-auto">
         {{#if user}}
           <li class="nav-item">
-              <a href="/dash" class="nav-link">Tu Perfil</a>
+              <a href="/dash" class="nav-link"><i class="fas fa-house-user fa-1xx"></i>  Home</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/logout">Cerrar Sesión</a>
+              <a class="nav-link" href="/logout"><i class="fas fa-sign-out-alt fa-1x"></i>  Cerrar Sesion</a>
           </li>
           {{else}}
           <li class="nav-item">
-              <a href="/signin" class="nav-link">Iniciar Sesión</a>
+              <a href="/signin" class="nav-link"><i class="fas fa-sign-in-alt fa-1x"></i>  Iniciar Sesion</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="/signup">Registrarse</a>
+              <a class="nav-link" href="/signup"><i class="fas fa-user-plus fa-1x"></i>  Registrarse</a>
           </li>
         {{/if}}
       </ul>
