--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -7,10 +7,10 @@
             <div class="card-body">
                 <form action="/signin" method="POST">
                     <div class="form-group">
-                        <input type="email" name="email" placeholder="Tu Email" class="form-control">
+                        <input type="email" name="email" placeholder="Sign-In ID (Email)" class="form-control">
                     </div>
                     <div class="form-group">
-                        <input type="password" name="password" placeholder="Tu Password" class="form-control">
+                        <input type="password" name="password" placeholder="Password" class="form-control">
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">
                         INICIAR SESIÓN
