--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,28 +1,12 @@
-<h1>Bienvenido a Music.io, en esta plataforma puedes:</h1>
 
-<div class="container p-2">
-    <div class="row">
-        <div class="card-columns">
-            <div class="card text-center">
-                <i class="fas fa-compact-disc fa-10x"></i>
-                <div class="card-body">
-                    <h3>Escuchar tus canciones favoritas.</h3>
-                </div>
-            </div>
-            <div class="card text-center">
-                <i class="fas fa-list fa-10x"></i>
-                <div class="card-body">
-                    <h3>Crear tus playlist personalizadas.</h3>
-                </div>
-            </div>
-            <div class="card text-center">
-                <i class="fas fa-search fa-10x"></i>
-                <div class="card-body">
-                    <h3>Buscar tus canciones y artistas favotitos.</h3>
-                </div>
-            </div>
-        </div>
-    </div>
+<dv class="jumbotron">
+  <h1 class="display-4">Music.io</h1>
+  <p class="lead">Bienvenido.</p>
+  <hr class="my-4">
+  <p>Escucha tus canciones favoritas, busca tus canciones preferidas y crea tus playlists.</p>
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" href="/about" role="button">Acerca de</a>
+  </p>
 </div>
 
 <h1 class="text-center">Unete y empieza!</h1>
