--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -30,20 +30,16 @@
       rel="stylesheet">
 
 {{#if user}}
-<footer class="footer mx-auto py-3">
-  <div class="container mx-auto" id="audio-player-container">
-        <audio src='/play/{{_id}}' preload=”metadata” loop>
-        </audio>
-        <button id="play-icon"></button>
-        <span id="current-time" class="time">0:00</span>
-        <input type="range" id="seek-slider" max="100" value="0">
-        <span id="duration" class="time">0:00</span>
-        <output id="volume-output">100</output>
-        <input type="range" id="volume-slider" max="100" value="100">
-        <button id="mute-icon"></button>
-  </div>
-</footer>
- {{/if}}
+<div class="container p-6">
+    <div class="row">
+        <div class="col-md-5 mx-auto">
+        <audio controls muted>
+            <source src="play/{{_id}}" type="audio/mpeg">
+        </audio>    
+        </div>
+    </div>
+</div>
+{{/if}}
 
 <!-- Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
